--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <nav class="navbar display-flex-row">
         <h2 class="font-navy">TechNova</h2>
         <ul class="menu ul-style display-flex-row">
-          <li class="menu-item"><a href="#" class=" text-color text-decoration">Home</a></li>
-          <li class="menu-item"><a href="#" class=" text-color text-decoration">About</a></li>
-          <li class="menu-item"><a href="#" class=" text-color text-decoration">Services</a></li>
-          <li class="menu-item"><a href="#" class=" text-color text-decoration">Portfolio</a></li>
-          <li class="menu-item"><a href="#" class=" text-color text-decoration">Contact</a></li>
+          <li class="menu-item"><a href="https://nargesz13.github.io/TechNova/" class=" text-color text-decoration">Home</a></li>
+          <li class="menu-item"><a href="#about" class=" text-color text-decoration">About</a></li>
+          <li class="menu-item"><a href="#services" class=" text-color text-decoration">Services</a></li>
+          <li class="menu-item"><a href="#portfolio" class=" text-color text-decoration">Portfolio</a></li>
+          <li class="menu-item"><a href="#contact" class=" text-color text-decoration">Contact</a></li>
         </ul>
         <button class="btn btn-navbar bg-blue">Get Started</button>
     <!-- .....................................Mob-nav................................... -->
@@ -31,11 +31,11 @@
       </nav>
       <div class="nav-mob">
         <div class="menu-mob"> 
-          <span class="menu-item"><a href="#" class=" text-color text-decoration">Home</a></span>
-          <span class="menu-item"><a href="#" class=" text-color text-decoration">About</a></span>
-          <span class="menu-item"><a href="#" class=" text-color text-decoration">Services</a></span>
-          <span class="menu-item"><a href="#" class=" text-color text-decoration">Portfolio</a></span>
-          <span class="menu-item"><a href="#" class=" text-color text-decoration">Contact</a></span>
+          <span class="menu-item"><a href="https://nargesz13.github.io/TechNova/" class=" text-color text-decoration">Home</a></span>
+          <span class="menu-item"><a href="#about" class=" text-color text-decoration">About</a></span>
+          <span class="menu-item"><a href="#services" class=" text-color text-decoration">Services</a></span>
+          <span class="menu-item"><a href="#portfolio" class=" text-color text-decoration">Portfolio</a></span>
+          <span class="menu-item"><a href="#contact" class=" text-color text-decoration">Contact</a></span>
         </div>
         <button class="btn btn-navbar-mob bg-blue">Get Started</button>
       </div>
@@ -60,7 +60,7 @@
       <!-- .................................about....................................... -->
 
       <div class="about-section display-flex-row">
-        <div class="content-about">
+        <div id="about" class="content-about">
           <h2 class="head-title-section font-navy title-center">
             About TechNova
           </h2>
@@ -149,7 +149,7 @@
       </div>
       <!-- ..................................Services..................................... -->
       <div class="services-section display-flex-row">
-        <div class="content-services">
+        <div id="services" class="content-services">
           <h2 class="head-title-section font-navy title-center">
             Our Services
           </h2>
@@ -400,7 +400,7 @@
       </div>
       <!-- ..................................Portfolio..................................... -->
       <div class="portfolio-section display-flex-row">
-        <div class="content-portfolio">
+        <div id="portfolio" class="content-portfolio">
           <h2 class="head-title-section font-navy title-center">
             Our Portfolio
           </h2>
@@ -553,7 +553,7 @@
       </div>
       <!-- ..................................contact us..................................... -->
       <div class="contact-section display-flex-row">
-        <div class="content-contact">
+        <div id="contact" class="content-contact">
           <h2 class="head-title-section font-navy title-center ">
             Get In Touch
           </h2>
