--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>TechNova</title>
   </head>
   <body>
-    <header>
+    <header id="top-site">
       <nav class="navbar display-flex-row">
         <h2 class="font-navy">TechNova</h2>
         <ul class="menu ul-style display-flex-row">
@@ -40,7 +40,7 @@
         <button class="btn btn-navbar-mob bg-blue">Get Started</button>
       </div>
     <!-- .....................................End-mob-nav................................... -->
-
+      <a href="#top-site" class="top"><i class="fa fa-arrow-alt-circle-up fa-3x up-icon"></i></a>
       <div class="hero-section display-flex-row">
         <div class="content-hero">
           <h2 class="head-title-section font-navy">TechNova</h2>
